More changes to eventListener

--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -2,6 +2,6 @@
   <label for="forTitleOfBlog">Title</label>
   <input  class="title"type="text" name="Title">
   <label for="forBlog">Blog Content</label>
-  <textarea name="Blog">Add your Blog Post here</textarea>
+  <input  class="title"type="text" name="Title">
   <button class="submit-button" name="button">Submit</button>
 </form>
