Almost done project

--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,7 +1,7 @@
-<form action="" method="post">
+<form class="form" action="" method="post">
   <label for="forTitleOfBlog">Title</label>
   <input  class="title"type="text" name="Title">
   <label for="forBlog">Blog Content</label>
   <input  class="title"type="text" name="Title">
-  <button class="submit-button" name="button">Submit</button>
+  <button class="submit-button" name="button" type="submit">Submit</button>
 </form>
