adding update files

--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,7 +1,7 @@
 <form class="form" action="" method="post">
   <label for="forTitleOfBlog">Title</label>
-  <input  class="title"type="text" name="Title">
+  <input  type="text" >
   <label for="forBlog">Blog Content</label>
-  <input  class="title"type="text" name="Title">
+  <input  type="text" >
   <button class="submit-button" name="button" type="submit">Submit</button>
 </form>
